@@ -45,7 +45,7 @@
 #include "completer.h"
 #include "bcache.h"
 #include "hashtab.h"
-#include <readline/readline.h>
+#include "readline/readline.h"
 #include "gdb_assert.h"
 #include "block.h"
 
