@@ -37,7 +37,7 @@
 #include "dictionary.h"
 
 #include "gdb_string.h"
-#include <readline/readline.h>
+#include "readline/readline.h"
 
 #ifndef DEV_TTY
 #define DEV_TTY "/dev/tty"
